--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,36 @@ body {
 }
 
 .container {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.carousel {
+  padding: 0 0 0 0;
+}
+
+.columner {
+  margin-top: 10%;
+  height: 15em;
+  padding-right: 0;
+}
+
+.item {
+  height: 8em;
+  top: -20%;
+}
+
+img {
+    width: 100%;
+    height: 200px;
 }
 
 .main-block {
   background-color: #ffffff;
-  height: 10em;
-  margin-top: 3em;
+  margin-top: 1em;
+  height: 25em;
+}
 
+iframe {
+  border: none !important;
 }
