--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,8 @@ body {
 img {
     width: 100%;
     height: 200px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
 }
 
 .main-block {
@@ -35,4 +37,6 @@ img {
 
 iframe {
   border: none !important;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
