--- a/css/main.css
+++ b/css/main.css
@@ -1,45 +1,93 @@
+@font-face {
+  font-family: Arual;
+  src: local(bttf_font), url('../fonts/Arual.ttf') format('opentype');
+}
+
 body {
   background-color: #000000;
 }
 
-.container-fluid {
-  margin-left: 0;
-  margin-right: 0;
+#title {
+  font-family: Arual, serif;
+  width: 100%;
+  padding-top: 10%;
+  padding-bottom: 8%;
+  font-size: 25px;
+  font-weight: bold;
 }
 
-.carousel {
-  padding: 0 0 0 0;
+.container {
+  min-width: 0;
+  width: auto;
 }
 
-.columner {
-  margin-top: 10%;
-  height: 15em;
-  padding-right: 0;
+.contain {
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
+  height: 50%;
+  margin-top: 8%;
+  display: inline-flex;
+}
+
+.left-block {
+  height: 30em;
+  width: 60%;
+}
+
+.right-block {
+  height: 30em;
+  width: 35%;
+  background-color: #ffffff;
+  margin-left: 1em;
+}
+
+.sfw-content {
+  font-family: Courier, serif;
+  padding-left: 2em;
+}
+
+.nsfw-content {
+  font-family: Courier, serif;
+  padding-left: 2em;
+}
+
+#news {
+  height: 100%;
+}
+
+a {
+  color: inherit;
+}
+
+a:hover {
+  background-color: #b1a8a7;
+  color: inherit;
+  text-decoration: none;
 }
 
 .item {
-  height: 8em;
+  height: 7em;
+}
+
+i {
+  padding-left: 0.5em;
+}
+
+.liner {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  height: 1em;
+  color: #ffffff;
+  font-family: "Orbitron", Times, sans-serif;
 }
 
 img {
-    width: 100%;
-    height: 200px;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
 }
 
 .main-block {
   background-color: #ffffff;
-  margin-top: 1em;
-  height: 25em;
-}
-
-iframe {
-  border: none !important;
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-}
-
-.content {
-  font-family: Verdana;
+  height: 20em;
 }
