--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,18 @@ body {
   padding-bottom: 8%;
   font-size: 25px;
   font-weight: bold;
+  text-transform: uppercase;
+}
+
+.quote {
+  width: 100%;
+  color: #ffffff;
+  margin-top: 1em;
+  font-style: italic;
+  font-size: 1.5em;
 }
 
 .container {
-  min-width: 0;
   width: auto;
 }
 
@@ -25,20 +33,19 @@ body {
   margin-left: 20%;
   margin-right: 20%;
   width: 60%;
-  height: 50%;
+  height: 27em;
   margin-top: 8%;
   display: inline-flex;
 }
 
 .left-block {
-  height: 30em;
+  height: 27em;
   width: 60%;
 }
 
 .right-block {
   height: 30em;
   width: 35%;
-  background-color: #ffffff;
   margin-left: 1em;
 }
 
@@ -58,6 +65,12 @@ body {
 
 a {
   color: inherit;
+}
+
+iframe {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  height: 30em;
 }
 
 a:hover {
@@ -89,5 +102,5 @@ img {
 
 .main-block {
   background-color: #ffffff;
-  height: 20em;
+  height: 17em;
 }
