--- a/css/main.css
+++ b/css/main.css
@@ -72,9 +72,8 @@ iframe {
 }
 
 a:hover {
-  background-color: #b1a8a7;
   color: inherit;
-  text-decoration: none;
+  text-decoration-color: #000000;
 }
 
 .item {
